--- a/index.html
+++ b/index.html
@@ -5,20 +5,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>aenimAI Realtime Voice Chat</title>
   <style>
-    body{
+    body {
       font-family: Arial, sans-serif;
-      background-color:#121212;
-      color:#f5f5f5;
-      display:flex;
-      flex-direction:column;
-      align-items:center;
-      justify-content:center;
-      height:100vh;
-      margin:0;
-      text-align:center;
+      background-color: #121212;
+      color: #f5f5f5;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+      margin: 0;
+      text-align: center;
     }
-    h1{ color:#1db954; margin-bottom:8px; }
-    #status{ color:#ccc; font-size:16px; margin-bottom:8px; }
+    h1 { color: #1db954; margin-bottom: 8px; }
+    #status { color: #ccc; font-size: 16px; margin-bottom: 8px; }
 
     #controlsRow{
       display:flex;
@@ -26,14 +26,7 @@
       align-items:center;
       justify-content:center;
       margin-top:12px;
-      width:min(560px,92vw);
-    }
-    #inputRow{
-      display:flex;
-      gap:8px;
-      align-items:center;
-      justify-content:center;
-      width:100%;
+      width:min(720px, 92vw);
     }
     #textInput{
       flex:1;
@@ -41,48 +34,45 @@
       padding:10px 12px;
       border-radius:10px;
       border:1px solid #333;
-      background:rgba(0,0,0,0.35);
+      background: rgba(0,0,0,0.35);
       color:#f5f5f5;
       outline:none;
     }
-    #sendText{
+    button{
       padding:10px 14px;
       border-radius:10px;
       border:1px solid #2b2b2b;
-      background:#1db954;
-      color:#0b0b0b;
       cursor:pointer;
       font-weight:600;
       white-space:nowrap;
     }
-    #sendText:disabled{ opacity:.5; cursor:not-allowed; }
-
-    /* NEW: mic toggle button */
+    #sendText{
+      background:#1db954;
+      color:#0b0b0b;
+    }
+    #sendText:disabled,
+    #micToggle:disabled{
+      opacity:0.5;
+      cursor:not-allowed;
+    }
     #micToggle{
-      padding:10px 14px;
-      border-radius:10px;
-      border:1px solid #2b2b2b;
       background:#2a2a2a;
       color:#f5f5f5;
-      cursor:pointer;
-      font-weight:600;
-      white-space:nowrap;
     }
     #micToggle.on{
       background:#1db954;
       color:#0b0b0b;
     }
-    #micToggle:disabled{ opacity:.5; cursor:not-allowed; }
 
-    #log{
-      position:fixed;
-      bottom:10px; left:10px; right:10px;
-      max-height:35vh; overflow-y:auto;
-      font-size:11px;
-      background:rgba(0,0,0,0.75);
-      padding:8px; border-radius:8px;
-      border:1px solid #333;
-      text-align:left; white-space:pre-wrap;
+    #log {
+      position: fixed;
+      bottom: 10px; left: 10px; right: 10px;
+      max-height: 35vh; overflow-y: auto;
+      font-size: 11px;
+      background: rgba(0,0,0,0.75);
+      padding: 8px; border-radius: 8px;
+      border: 1px solid #333;
+      text-align: left; white-space: pre-wrap;
     }
   </style>
 </head>
@@ -92,10 +82,8 @@
   <p id="status">Initializing...</p>
 
   <div id="controlsRow">
-    <div id="inputRow">
-      <input id="textInput" type="text" placeholder="Type a message…" autocomplete="off" />
-      <button id="sendText" disabled>Send</button>
-    </div>
+    <input id="textInput" type="text" placeholder="Type a message…" autocomplete="off" />
+    <button id="sendText" disabled>Send</button>
     <button id="micToggle" disabled>🎙️ Talk</button>
   </div>
 
@@ -137,7 +125,7 @@
         });
         appendLog(`📤 Sent to n8n [${role}]: ${text}`);
       }catch(err){
-        appendLog("⚠️ Failed to send: " + err.message);
+        appendLog("⚠️ Failed to send: "+err.message);
       }
     }
 
@@ -155,20 +143,59 @@
         const token = session.client_secret.value;
         const model = session.model;
 
-        // --- WebRTC setup (NO MIC REQUEST YET) ---
         const pc = new RTCPeerConnection();
 
+        // Remote audio (assistant voice)
         const remoteAudio = document.createElement("audio");
         remoteAudio.autoplay = true;
         pc.ontrack = e => { remoteAudio.srcObject = e.streams[0]; };
 
-        const dc = pc.createDataChannel("oai-events");
+        // ✅ IMPORTANT: reserve an audio section in SDP WITHOUT mic permission
+        const audioTransceiver = pc.addTransceiver("audio", { direction: "sendrecv" });
+        const audioSender = audioTransceiver.sender;
 
-        // mic state
         let micStream = null;
         let micEnabled = false;
 
-        // ✅ Explicitly request assistant response in chosen modality
+        async function enableMic(){
+          if(micEnabled) return;
+          try{
+            micStream = await navigator.mediaDevices.getUserMedia({ audio:true });
+            const track = micStream.getAudioTracks()[0];
+            await audioSender.replaceTrack(track);
+
+            micEnabled = true;
+            micBtnEl.classList.add("on");
+            micBtnEl.textContent = "🔴 Talking";
+            appendLog("🎙️ Mic enabled");
+          }catch(err){
+            appendLog("❌ Mic error: " + err.message);
+          }
+        }
+
+        async function disableMic(){
+          if(!micEnabled) return;
+
+          try{ await audioSender.replaceTrack(null); } catch(e){}
+
+          if(micStream){
+            micStream.getTracks().forEach(t => t.stop());
+          }
+          micStream = null;
+
+          micEnabled = false;
+          micBtnEl.classList.remove("on");
+          micBtnEl.textContent = "🎙️ Talk";
+          appendLog("🎙️ Mic disabled");
+        }
+
+        micBtnEl.addEventListener("click", ()=>{
+          if(micEnabled) disableMic();
+          else enableMic();
+        });
+
+        const dc = pc.createDataChannel("oai-events");
+
         function requestAssistantResponse(modalities){
           if(!dc || dc.readyState !== "open"){
             appendLog("⚠️ Data channel not open yet — can't request response.");
@@ -180,55 +207,13 @@
           }));
         }
 
-        // NEW: enable/disable mic by adding/removing tracks
-        async function enableMic(){
-          if(micEnabled) return;
-          try{
-            micStream = await navigator.mediaDevices.getUserMedia({ audio:true });
-            micStream.getTracks().forEach(t => pc.addTrack(t, micStream));
-            micEnabled = true;
-            micBtnEl.classList.add("on");
-            micBtnEl.textContent = "🔴 Talking (click to stop)";
-            appendLog("🎙️ Mic enabled");
-
-            // (Optional) tell user they can speak now:
-            // appendLog("🗣️ Speak now...");
-          }catch(err){
-            appendLog("❌ Mic permission/error: " + err.message);
-          }
-        }
-
-        function disableMic(){
-          if(!micEnabled) return;
-          try{
-            if(micStream){
-              micStream.getTracks().forEach(t => t.stop());
-            }
-          }catch(e){}
-          micStream = null;
-          micEnabled = false;
-          micBtnEl.classList.remove("on");
-          micBtnEl.textContent = "🎙️ Talk";
-          appendLog("🎙️ Mic disabled");
-        }
-
-        function toggleMic(){
-          if(!dc || dc.readyState !== "open"){
-            appendLog("⚠️ Not connected yet — can't toggle mic.");
-            return;
-          }
-          if(micEnabled) disableMic();
-          else enableMic();
-        }
-
         dc.onopen = ()=>{
           appendLog("📡 Data channel open");
           sendBtnEl.disabled = false;
           micBtnEl.disabled  = false;
         };
-        dc.onerror = (e)=>appendLog("⚠️ Data channel error " + (e?.message || ""));
+        dc.onerror = (e)=>appendLog("⚠️ Data channel error "+(e?.message || ""));
 
-        // ✅ Typed input => user msg + TEXT response
         function sendTypedText(){
           const text = (textInputEl.value || "").trim();
           if(!text) return;
@@ -261,10 +246,6 @@
           if(e.key === "Enter") sendTypedText();
         });
 
-        // NEW: mic toggle button
-        micBtnEl.addEventListener("click", toggleMic);
-
-        // Text buffer (optional)
         let textBuffer = "";
 
         dc.onmessage = async (event)=>{
@@ -275,32 +256,24 @@
 
           const type = msg.type || "";
 
-          // ===============================
-          // 1) USER SPEECH TRANSCRIPTION
-          // ===============================
+          // 1) User speech -> transcription
           if(type === "conversation.item.input_audio_transcription.completed"){
             const text = (msg.transcript || "").trim();
             if(text){
               appendLog("🧑 User: " + text);
               await sendToN8N("user", text);
 
-              // Only request audio response if mic is currently enabled
+              // Only speak back if mic mode is enabled
               if(micEnabled){
                 requestAssistantResponse(["audio"]);
               }
             }
           }
 
-          // ===============================
-          // 2) ASSISTANT TEXT EVENTS (typed mode)
-          // ===============================
+          // 2) Assistant text (typed responses)
           if(type === "response.text.delta"){
             const delta = msg.delta || "";
-            if(delta){
-              textBuffer += delta;
-              // keep it simple: show streaming as separate logs (or wait for done)
-              // appendLog("🤖 Assistant (typing): " + delta);
-            }
+            if(delta) textBuffer += delta;
           }
 
           if(type === "response.text.done"){
@@ -312,9 +285,7 @@
             textBuffer = "";
           }
 
-          // ===============================
-          // 3) ASSISTANT AUDIO TRANSCRIPT EVENTS (voice mode)
-          // ===============================
+          // 3) Assistant audio transcript (voice responses)
           if(type === "response.output_item.done"){
             if(!msg.item || !msg.item.content) return;
             for(const c of msg.item.content){
@@ -327,7 +298,7 @@
           }
         };
 
-        // WebRTC offer → OpenAI
+        // Offer/Answer with OpenAI Realtime
         const offer = await pc.createOffer();
         await pc.setLocalDescription(offer);
 
@@ -337,25 +308,26 @@
             method:"POST",
             headers:{
               "Content-Type":"application/sdp",
-              Authorization:`Bearer ${token}`
+              "Authorization": `Bearer ${token}`
             },
             body: offer.sdp
           }
         );
 
         const ans = await res.text();
+
+        // Helpful debug if anything goes wrong
         appendLog(`🛰️ Realtime SDP response status: ${res.status}`);
         appendLog(`🛰️ Realtime SDP response head: ${ans.slice(0,120).replace(/\n/g," ")}`);
 
-        if (!res.ok || !ans.trim().startsWith("v=")) {
-        throw new Error(`Realtime returned non-SDP: ${ans.slice(0,200)}`);
+        if(!res.ok || !ans.trim().startsWith("v=")){
+          throw new Error("Realtime returned non-SDP: " + ans.slice(0,200));
         }
 
-        await pc.setRemoteDescription({ type: "answer", sdp: ans });
+        await pc.setRemoteDescription({ type:"answer", sdp: ans });
 
         setStatus("🟢 Connected — type anytime. Click 🎙️ Talk to start/stop voice.");
         appendLog("✅ Connected to OpenAI realtime");
-        appendLog("💡 Tip: Start with typing; enable mic only when you want to talk.");
 
       }catch(err){
         setStatus("❌ " + err.message);
@@ -367,3 +339,4 @@
   </script>
 </body>
 </html>
+
