--- a/index.html
+++ b/index.html
@@ -182,6 +182,7 @@
         drop-shadow(0 0 40px rgba(255,255,255,0.12));
       opacity: .95;
       transform: translateZ(0);
+      display: none;
     }
 
     /* ring pulse around logo */
